# baccalaureate-crawler

./: .gitignore  devbox.json  pyproject.toml
data/biologie_anatomie/2015/model/: result.json
data/biologie_anatomie/2015/sesiunea_de_toamna/: result.json
data/biologie_anatomie/2015/sesiunea_de_vara/: result.json
data/biologie_anatomie/2016/model/: result.json
data/biologie_anatomie/2016/sesiunea_de_toamna/: result.json
data/biologie_anatomie/2016/sesiunea_de_vara/: result.json
data/biologie_anatomie/2016/sesiunea_speciala/: result.json
data/biologie_anatomie/2017/model/: result.json
data/biologie_anatomie/2017/sesiunea_de_toamna/: result.json
data/biologie_anatomie/2017/sesiunea_de_vara/: result.json
data/biologie_anatomie/2017/sesiunea_speciala/: result.json
data/biologie_anatomie/2017/simulare/: result.json
data/biologie_anatomie/2018/model/: result.json
data/biologie_anatomie/2018/sesiunea_de_toamna/: result.json
data/biologie_anatomie/2018/sesiunea_de_vara/: result.json
data/biologie_anatomie/2018/sesiunea_speciala/: result.json
data/biologie_anatomie/2018/simulare/: result.json
data/filosofie/: result.json
data/istorie/: result.json
data/logica/: result.json
final/: biologie_anatomie.json  biologie_vegetala_animala.json  chimie_anorganica.json  chimie_organica.json  economie.json  filosofie.json  geografie.json  istorie.json  logica.json  psihologie.json  sociologie.json
src/: images.py  main.py
src/parser/: main.py
src/parser/fields/: history.py
src/utils/: io.py  parser.py  regex.py
(+385 files in other folders)
