[project]
name = "bac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gdown>=5.2.1",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "progressbar2>=4.5.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
]
